--- a/stack.yaml
+++ b/stack.yaml
@@ -1,9 +1,9 @@
 packages:
 - '.'
 
-- location:
-    git: https://github.com/haskell-game/sdl2
-    commit: 472f3abe8a9a1e8970b19e9f91a65f6c62a8a97d
+- location: /home/bart/sources/sdl2
+    #git: https://github.com/haskell-game/sdl2
+    #commit: 472f3abe8a9a1e8970b19e9f91a65f6c62a8a97d
   extra-dep: true
 
 extra-deps:
