--- a/stack.yaml
+++ b/stack.yaml
@@ -1,30 +1,29 @@
-resolver: nightly-2016-09-17
+resolver: lts-7.9
 
 packages:
 - '.'
 
-- location: /home/bart/sources/sdl2
-    # git: https://github.com/haskell-game/sdl2
-    # commit: e0812f7285ce33842fa9bccd9ea04d66590e8090
+- location:
+    git: https://github.com/haskell-game/sdl2
+    commit: e0812f7285ce33842fa9bccd9ea04d66590e8090
   extra-dep: true
 
 - location:
     git: https://github.com/reflex-frp/reflex
-    commit: a63aba90bdea5ae5b3e1506d468613bdfedcdfa3
+    commit: 91299fce0bb2caddfba35af6608df57dd31e3690
   extra-dep: true
 
 - location:
     git: https://github.com/dalaing/reflex-sdl2
-    commit: a98f0f154c2159f5170b0c280d09762f2b6b2a2a
+    commit: 152179bfddcec53b3764ba460101d292af4e0304
   extra-dep: true
 
 extra-deps:
-- binary-strict-0.4.8.3
-- exception-transformers-0.4.0.4
-- haskell-src-exts-1.17.1
-- haskell-src-meta-0.6.0.14
 - rapid-0.1.2
+- prim-uniq-0.1.0.1
 - ref-tf-0.4.0.1
+- MemoTrie-0.6.7
+- newtype-generics-0.5
 
 ghc-options:
   hackslash: "-fPIC -fobject-code"
